Bug 480297 - GroupModel entry selection doesn't update
Summary: GroupModel entry selection doesn't update
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.5.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-25 02:17 UTC by Robby Stephenson
Modified: 2024-02-03 21:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2024-01-25 02:17:58 UTC
When I fire up tellico, the left hand panel displays "Artist" (I think
this field is remembered from the previous run).

If I expand a few of the "Artists" and select several discs, the bottom
right correctly displays the chosen disc.

If I now use the pull-down to the left of the "Filter here..." box to
select another field to display on the left, e.g. "Label", expand a few
of the "Labels", and then try to select discs, the bottom right is NOT
updated, and I can end up editing the wrong disc.
Comment 1 Robby Stephenson 2024-01-25 03:03:19 UTC
Git commit 29353d93b80fae281645bbf33d37cf844be61c19 by Robby Stephenson.
Committed on 25/01/2024 at 04:03.
Pushed by rstephenson into branch '3.5'.

Clear selected entries when group field is changed
FIXED-IN: 3.5.4

M  +4    -0    ChangeLog
M  +1    -1    src/groupview.cpp
M  +0    -1    src/models/entrygroupmodel.cpp
M  +2    -0    src/models/entryselectionmodel.cpp

https://invent.kde.org/office/tellico/-/commit/29353d93b80fae281645bbf33d37cf844be61c19
Comment 2 Robby Stephenson 2024-02-03 21:51:46 UTC
Git commit 2e0667da25532bb4bbb19f3c55aaa938cb6fad9c by Robby Stephenson.
Committed on 03/02/2024 at 21:26.
Pushed by rstephenson into branch 'master'.

Clear selected entries when group field is changed
FIXED-IN: 3.5.4

M  +4    -0    ChangeLog
M  +1    -1    src/groupview.cpp
M  +0    -1    src/models/entrygroupmodel.cpp
M  +2    -0    src/models/entryselectionmodel.cpp

https://invent.kde.org/office/tellico/-/commit/2e0667da25532bb4bbb19f3c55aaa938cb6fad9c
Comment 3 Robby Stephenson 2024-02-03 21:51:50 UTC
Git commit 2e0667da25532bb4bbb19f3c55aaa938cb6fad9c by Robby Stephenson.
Committed on 03/02/2024 at 21:26.
Pushed by rstephenson into branch 'master'.

Clear selected entries when group field is changed
FIXED-IN: 3.5.4

M  +4    -0    ChangeLog
M  +1    -1    src/groupview.cpp
M  +0    -1    src/models/entrygroupmodel.cpp
M  +2    -0    src/models/entryselectionmodel.cpp

https://invent.kde.org/office/tellico/-/commit/2e0667da25532bb4bbb19f3c55aaa938cb6fad9c