Clear selected entries when group field is changed

BUG: 480297
FIXED-IN: 3.5.4